--- a/Backend/EindCasus/EindCasus/Properties/launchSettings.json
+++ b/Backend/EindCasus/EindCasus/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/cursus/alle",
+      "launchUrl": "api/cursussen",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,7 +20,7 @@
     "EindCasus": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/cursus/alle",
+      "launchUrl": "api/cursussen",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
